ingress/deployment_ken.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guile-deployment
spec:
  selector:
    matchLabels:
      app: guile
  replicas: 2
  template:
    metadata:
      labels:
        app: guile
    spec:
      containers:
      - name: nginx
        image: docker.io/serkangumus06/nginx:guile
        ports:
        - containerPort: 80
