ingress/service_ryu.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ryu
  name: ryu-myservice
spec:
  ports:
  - name: nginx
    port: 3000
    protocol: TCP
    targetPort: 80
  selector:
    app: ryu
  sessionAffinity: None
  type: NodePort
